[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/tempplayer_aim.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/player_pistol.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/tempplayer_ball.png" type="Texture" id=5]
[ext_resource path="res://Hit_Hurtboxes/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/SFX/sfx_hits.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/sfx_single_pistol_shoot.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/sfx_teleport.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/sfx_jump.wav" type="AudioStream" id=10]
[ext_resource path="res://Hit_Hurtboxes/Knockback.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/InvincibilityUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/SFX/sfx_player_hit_by_enemy.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Start"
length = 0.2
loop = true

[sub_resource type="Animation" id=2]
resource_name = "Stop"
length = 0.1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 9 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.39457
height = 2.70943

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.45519, 6.28274 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1.415, -0.0229755 )
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 1 )
anims/Stop = SubResource( 2 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="Crosshair" type="Sprite" parent="."]
position = Vector2( 32, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = 80
texture = ExtResource( 3 )

[node name="Gun" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 10, 1 )

[node name="Gun_Tip" type="Position2D" parent="Gun"]
position = Vector2( 15, 0 )
rotation = 1.57079

[node name="Ball" type="Sprite" parent="."]
position = Vector2( -10.528, -6.03323 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Ammo_Label" type="Label" parent="."]
margin_left = -7.0
margin_top = -23.0
margin_right = 7.0
margin_bottom = -9.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerKnockback" parent="." instance=ExtResource( 11 )]
collision_layer = 32
collision_mask = 2147483648

[node name="CollisionShape2D" parent="PlayerKnockback" index="0"]
position = Vector2( -1.03009, 1.21738 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0.501961, 0.054902, 0.054902, 1 )
position = Vector2( -1, 1 )
shape = SubResource( 5 )

[node name="Audio_Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Audio_Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Audio_Teleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Audio_Hit_By_Enemy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Audio_Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="Invincibility" parent="." instance=ExtResource( 12 )]

[node name="Invincibility" parent="Invincibility" index="0"]
visible = false
margin_left = -44.8236
margin_top = -46.4117
margin_right = 55.1764
margin_bottom = -32.4113
text = "Invincibility ON"
[connection signal="area_entered" from="PlayerKnockback" to="." method="_on_PlayerKnockback_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="Invincibility" method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="Invincibility" method="_on_Hurtbox_invincibility_started"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="PlayerKnockback"]

[editable path="Hurtbox"]

[editable path="Invincibility"]
